# medici-data-sync

./: Cargo.toml
.github/workflows/: sync.yaml
data/: drem.json  hemato.json  hemato2.json  hemato3.json  hemato_test.json
lib/: Cargo.toml
lib/src/: data.rs  helpers.rs  lib.rs  raw_data.rs  sync.rs
src/: data.rs  format.rs  lib.rs  main.rs  raw_data.rs  sync.rs
