[package]
name = "medici-data-synchronizer"
version = "0.1.0"
edition = "2021"
rust-version = "1.62"

[dependencies]
anyhow = "1.0.64"
blake3 = "1.3.1"
clap = { version = "3.2.20", features = ["derive"] }
reqwest = { version = "0.11.11", default-features = false, features = [
    "rustls-tls",
    "json",
] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "1.1.2", features = ["std", "v4", "serde"] }
