[workspace]
members = [".", "lib"]

[package]
name = "data-synchronizer-bin"
version = "0.1.0"
edition = "2021"
rust-version = "1.62"

[dependencies]
anyhow = "1.0.64"
clap = { version = "3.2.20", features = ["derive"] }
data-synchronizer = { path = "lib" }
reqwest = { version = "0.11.11", default-features = false, features = [
    "rustls-tls",
    "json",
] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.0", features = ["full"] }
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "1.1.2", features = ["std", "v4", "serde"] }
